# PolicyAI

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Makefile  PROJECT_CONTEXT.md  README.md  docker-compose.yml  pyproject.toml  render.yaml
.devcontainer/: devcontainer.json
docker/: api.Dockerfile  web.Dockerfile
docs/: COMPLIANCE_MAPPING.md  DEPLOY.md  FEATURE_ALIGNMENT.md
frontend/: package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(app)/: layout.tsx
frontend/src/app/(app)/admin/: page.tsx
frontend/src/app/(app)/ask/: page.tsx
frontend/src/app/(app)/controls/: page.tsx
frontend/src/app/(app)/dashboard/: page.tsx
frontend/src/app/(app)/gaps/: page.tsx
frontend/src/app/(app)/graph/: page.tsx
frontend/src/app/(app)/knowledge-base/: page.tsx
frontend/src/app/(app)/obligations/: page.tsx
frontend/src/app/(app)/policies/: page.tsx
frontend/src/app/(app)/tasks/: page.tsx
frontend/src/app/(marketing)/: landing.ts
frontend/src/app/(marketing)/blog/copilot-impact-assessments/: page.tsx
frontend/src/app/(marketing)/contact/: page.tsx
frontend/src/app/(marketing)/platform/: page.tsx
frontend/src/app/(marketing)/pricing/: page.tsx
frontend/src/app/(marketing)/resources/: page.tsx
frontend/src/app/(marketing)/security/: page.tsx
frontend/src/app/(marketing)/solutions/: page.tsx
frontend/src/app/api/ask/: route.ts
frontend/src/app/login/: page.tsx
frontend/src/components/: AlertFeed.tsx  AppShell.tsx  CommandPalette.tsx  ImpactAssessment.tsx  Loading.tsx  Markdown.tsx  ScanButton.tsx  Sidebar.tsx  Toast.tsx  Topbar.tsx  force-graph.tsx  ui.tsx
frontend/src/components/marketing/: CopilotHero3D.tsx  Shell.tsx  blocks.tsx
frontend/src/lib/: export.ts  graphFallback.ts  supabase.ts  types.ts
scripts/: backfill_dates.py  backfill_embeddings.py  backup_db.sh  build_sebi_records.py  init-db.sql  llm_switch.sh  quality_report.py  reprocess_unmapped.py  reverify_low_confidence.py
supabase/migrations/: 0000_platform.sql  0001_triggers.sql  0002_rls.sql  0003_grc_rls.sql  0004_tenancy_rls.sql  0006_requirements_rls.sql  0009_obligation_triage_rls.sql  0012_multitenant_provisioning.sql  0013_control_failure_alerts.sql
