[project]
name = "policyai"
version = "0.1.0"
description = "Regulatory intelligence platform for Indian RBI/SEBI circulars"
requires-python = ">=3.11"
dependencies = [
    "policyai-scrapers",
    "policyai-extraction",
    "policyai-graph",
    "policyai-api",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
policyai-scrapers = { workspace = true }
policyai-extraction = { workspace = true }
policyai-graph = { workspace = true }
policyai-api = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "black>=24.0",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages"]
