[project]
name = "policyai"
version = "0.1.0"
description = "Regulatory intelligence platform for Indian RBI/SEBI circulars"
requires-python = ">=3.11"
dependencies = [
    "policyai-scrapers",
    "policyai-extraction",
    "policyai-graph",
    "policyai-api",
    "sentence-transformers>=5.6.0",
    # Declared explicitly (it comes with sentence-transformers anyway) so the
    # pytorch-cpu index pin below applies; uv ignores sources for transitives.
    "torch>=2.0",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
policyai-scrapers = { workspace = true }
policyai-extraction = { workspace = true }
policyai-graph = { workspace = true }
policyai-api = { workspace = true }
# CPU-only torch: without this, torch on Linux drags in ~5GB of NVIDIA CUDA
# wheels the Docker image can't use. The cpu index also serves macOS wheels,
# so local dev resolves from the same place.
torch = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "black>=24.0",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Depends(...) in argument defaults is the canonical FastAPI idiom.
"packages/api/**" = ["B008"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages"]
